--- a/Welder/app/src/main/res/values/strings.xml
+++ b/Welder/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="konfirmasi_password">Konfirmasi Password</string>
     <string name="daftar">Daftar</string>
     <string name="kembali">Kembali</string>
+    <string name="log_out">Log Out</string>
     <array name="proyek">
         <item>SMAW</item>
         <item>FCAW</item>
