--- a/Pengguna/app/src/main/res/values/strings.xml
+++ b/Pengguna/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="rp">Rp</string>
     <string name="todo">TODO</string>
     <string name="kembali">Kembali</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
