--- a/Pengguna/app/src/main/res/values/strings.xml
+++ b/Pengguna/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="kapal">Kapal</string>
     <string name="offshore_onshore">Offshore/Onshore</string>
     <string name="kapal_ferro">Kapal Ferro</string>
-    <string name="kapal_non_ferro">Kapal Non Ferro</string>
+    <string name="kapal_non_ferro">Kapal Aluminium</string>
     <string name="stainless_steel">Stainless Steel</string>
     <string name="carbon_steel">Carbon Steel</string>
     <string name="storage_tank">Storage Tank</string>
