--- a/Admin/app/src/main/res/values/strings.xml
+++ b/Admin/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <array name="nmprk">
         <item>Steel Structure</item>
         <item>Kapal Ferro</item>
-        <item>Kapal Non Ferro</item>
+        <item>Kapal Aluminium</item>
         <item>Onshore/Offshore</item>
         <item>Stainless Steel</item>
         <item>Carbon Steel</item>
